Quick fix to make site layout fit on mobile better

--- a/jameblog/_sass/realjame.scss
+++ b/jameblog/_sass/realjame.scss
@@ -27,7 +27,7 @@ $table-text-align: left !default;
 // Width of the content area
 $content-width: 80% !default;
 
-$on-palm: 90% !default;
+$on-palm: 800px !default;
 $on-laptop: 800px !default;
 
 // Use media queries like this:
